SigmaCodebackup3rdSep/objects/Product_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Delivered_Quantity__c</fullName>
        <label>Delivered Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Product Transactions</relationshipLabel>
        <relationshipName>Product_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Merchant_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merchant Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Transactions (Merchant Account)</relationshipLabel>
        <relationshipName>Product_Transactions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Transactions (Parent Account)</relationshipLabel>
        <relationshipName>Product_Transactions3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Take_In__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Take In</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Transactions (Product Take In)</relationshipLabel>
        <relationshipName>Product_Transactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Take_Out__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Take Out</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Transactions</relationshipLabel>
        <relationshipName>Product_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Received_Quantity__c</fullName>
        <label>Received Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receiver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receiver</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Product Transactions (Receiver)</relationshipLabel>
        <relationshipName>Product_Transactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Returned_Quantity__c</fullName>
        <label>Returned Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Take_In_DateTime__c</fullName>
        <label>Take In DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Take_In_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Take In Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Transactions (Take In Location)</relationshipLabel>
        <relationshipName>Product_Transactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Take_In_Status__c</fullName>
        <label>Take In Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Take_Out_DateTime__c</fullName>
        <label>Take Out DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Take_Out_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Take Out Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Transactions</relationshipLabel>
        <relationshipName>Product_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Take_Out_Status__c</fullName>
        <label>Take Out Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Transaction</label>
    <nameField>
        <displayFormat>PT-{0000}</displayFormat>
        <label>Product Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>checkLocationType</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL(  Take_In_Location__r.Type  , &quot;Retail&quot;),false,true )|| IF( ISPICKVAL(  Take_Out_Location__r.Type , &quot;Warehouse&quot;),false,true )</errorConditionFormula>
        <errorMessage>Account type should be Warehouse or Retail</errorMessage>
    </validationRules>
</CustomObject>